@@ -3,6 +3,7 @@ import unittest
 import gc
 import stackless
 import types
+import pickle
 
 from support import test_main  # @UnusedImport
 from support import StacklessTestCase
@@ -50,6 +51,29 @@ class TestGeneratorWrapper(StacklessTestCase):
         self.assertIs(g0.gi_code, g1.gi_code)
         self.assertIsNot(g0.gi_frame, g1.gi_frame)
         self.assertEqual(g0.__name__, "exhausted_generator")
+
+
+class TestGeneratorPickling(StacklessTestCase):
+    def test_name(self):
+        def g():
+            yield 1
+        gen_orig = g()
+        p = pickle.dumps(gen_orig)
+        gen_new = pickle.loads(p)
+
+        self.assertEqual(gen_new.__name__, gen_orig.__name__)
+
+    def test_exhausted(self):
+        def g():
+            yield 1
+        gen_orig = g()
+        self.assertEqual(gen_orig.__next__(), 1)
+        self.assertRaises(StopIteration, gen_orig.__next__)
+        p = pickle.dumps(gen_orig)
+        self.assertRaises(StopIteration, gen_orig.__next__)
+        gen_new = pickle.loads(p)
+        self.assertRaises(StopIteration, gen_new.__next__)
+
 
 if __name__ == '__main__':
     unittest.main()
